# handyderivatives

./: .gitignore  README.md  backup_config.toml  cli.py  functions.txt  handyderivatives.py  multi-vari.txt  pyproject.toml  sym-test.sh  test.sh  test_package.py
equations/: functions.txt  multi-vari.txt
handyderivatives/: __init__.py  cli.py
output/: equations.tex
test/: latex-test.sh  stdout-test.sh  test.sh
