[tool.poetry]
name = "handyderivatives"
version = "0.1.0"
description = "A simple little to batch process some basic calc stuff."
authors = ["fitzy1293"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3"
sympy = "^1.7.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
handyderivatives = 'handyderivatives:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
