[tool.poetry]
name = "handyderivatives"
version = "2.1.1"
description = "Differntiate a list of functions of and auomatically compile a LaTeX document to view the results."
authors = ["fitzy1293"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/fitzy1293/handyderivatives'

[tool.poetry.dependencies]
python = "^3.6"
sympy = '^1.7.1'

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
handyderivatives = 'handyderivatives:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
