[tool.poetry]
name = "handyderivatives"
version = "2.3.2"
description = "Calc. on the command line - with LaTeX output."
authors = ["fitzy1293"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/fitzy1293/handyderivatives'

[tool.poetry.dependencies]
python = "^3.6"
sympy = '^1.7.1'

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
handyderivatives = 'handyderivatives:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
